Error Mitigation/MagiCoder/Data/java_time_format/java_time_formatOutputResult.txt
Sample: DateTimeFormatterBuilder_5
----------------------------------------------------------------
output:
./Data/java_time_format/javaFiles/DateTimeFormatterBuilder_5.java:10: error: incompatible types: DateTimeFormatter cannot be converted to DateTimeFormatterBuilder
               .withResolverStyle(ResolverStyle.STRICT);
                                 ^
1 error


================================================================

